--- a/css/nav.css
+++ b/css/nav.css
@@ -89,27 +89,52 @@ body{
     padding-bottom: 5px;
     font-weight: 700;
 }
-.hero-price{
+
+.hero-prices{
+    grid-column: 5/6;
+    align-self:end;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.hero-price1{
+    width: 70%;
+    font-size: 30px;
+
+}
+.hero-price2{
+    width: 30%;
+    align-self: end;
+    font-size: 24px;
+    color: rgb(224, 224, 224);
+    text-decoration: line-through ;
+}
+
+/* .hero-price{
     grid-column: 5/8;
     align-self: end;
     font-size: 27px;
-}
+} */
 
 .hero-cta{
     grid-column: 5/8;
-    align-self: end;
+    grid-row: 6/7;
+    justify-self: center;
+    align-self: start;
     text-decoration: none;
     color: #fff;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 22px;
+    display: inline-block;
+    background: #fc551d;
+    padding: 10px 70px;
+    border-radius: 20px;
+
 }
-
-
-
-
-
-
-
+.hero-t{
+    grid-column: 1/2;
+    grid-row: 7/8;
+}
 .grid-cont{
     width: 100%;
     height: 100%;
