--- a/css/nav.css
+++ b/css/nav.css
@@ -7,7 +7,7 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);;
+    /* background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);; */
 }
 .container{
     width: 100%;
@@ -15,7 +15,6 @@ body{
     height: 100vh;
     margin: 0 auto;
     overflow: hidden;
-    /* background: red; */
 
 }
 .nav{
@@ -25,7 +24,7 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /* background: red; */
+    margin-bottom: 30px;  /*can be removed*/
     
 }
 .logo{
@@ -51,7 +50,8 @@ body{
 .header{
     width: 100%;
     height: 100vh;
-    background-image: url("https://images.hdqwalls.com/wallpapers/shadow-of-the-colossus-2018-ps4-6w.jpg");
+    /* background-image: url("https://images.hdqwalls.com/wallpapers/shadow-of-the-colossus-2018-ps4-6w.jpg"); */
+    background-image: linear-gradient(to right, rgba(67, 67, 67, 0.226) 0%, rgba(0, 0, 0, 0.404) 100%), url("https://images.hdqwalls.com/wallpapers/shadow-of-the-colossus-2018-ps4-6w.jpg");
     background-attachment: scroll;
     background-repeat: no-repeat;
     background-position: center;
@@ -69,6 +69,7 @@ body{
     grid-column: 5/8;
     font-size: 56px;
     font-weight: 300;
+    
 }
 
 .hero-copy{
@@ -129,12 +130,33 @@ body{
     background: #fc551d;
     padding: 10px 70px;
     border-radius: 20px;
+    box-shadow: 5px 5px 5px  rgb(0, 0, 0 ,5);
+    transform: scale(1);
+    transition: transform 0.7s;
+}
+.hero-cta:hover{
+    box-shadow: 10px 10px 10px  rgb(0, 0, 0 ,10);
+    transform: scale(1.1);
+    cursor: pointer;
 
 }
 .hero-t{
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 7/8;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
+.hero-t-p{
+    width: 70%;
+    align-self: center;
+    font-weight: 300;
+}
+
+
+
+
+
 .grid-cont{
     width: 100%;
     height: 100%;
